fixed overlapping text

--- a/assets/css/styling.css
+++ b/assets/css/styling.css
@@ -112,13 +112,15 @@ nav a:hover{
 .intro-text-wrapper {
   border-left: 3px rgba(255, 255, 0, 0.457) solid;
   padding: 0.1rem 0.1rem 0.1rem 1.2rem;
-  width: 100%;
+  width: 80%;
   background-color: rgba(0, 0, 0, 0.144);
   margin-bottom: 1rem;
+  padding-right: 1rem !important;
 }
 
 .intro-text-wrapper p {
   color: rgb(218, 218, 218);
+
 }
 
 #cta_button {
@@ -202,7 +204,7 @@ table{
 /*   ########################################## Historical Places Section ##########################################   */
 
 #historic-places-section{
-    background-color: rgb(218, 218, 218);
+    background-color: rgb(255, 255, 255);
     padding-bottom: 2rem;
     width: 100%;
     overflow-x: hidden;
@@ -246,7 +248,7 @@ table{
 }
 
 #historic-place-title{
-    color:rgba(58, 0, 64, 0.641);
+    color:rgba(131, 1, 103, 0.756);
     font-size: 1.1rem;
 }
 
@@ -259,7 +261,7 @@ table{
     margin-left:20px
 }
 
-/*   ########################################## Media Quaries ##########################################   */
+/*   ########################################## Media Queries ##########################################   */
 
 
 @media screen and (max-width:450px) {
